--- a/wiki/fr/TechDraw_ExtensionInsertSquare.html
+++ b/wiki/fr/TechDraw_ExtensionInsertSquare.html
@@ -53,7 +53,7 @@
 <p>L'outil <b>TechDraw Section tube</b> ins&egrave;re un symbole &laquo;&nbsp;&#9633;&nbsp;&raquo; au d&eacute;but du texte de la cote.
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_extensionInsertSquareExample.png&amp;filetimestamp=20241001073118&amp;.html" class="mw-file-description"><img src="../File/TechDraw_extensionInsertSquareExample.png" decoding="async" width="500" height="128" class="mw-file-element" data-file-width="1142" data-file-height="293"></a></span>
 </p>
-<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">A droite, les cotes avec le symbole ins&eacute;r&eacute;</p>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">&Agrave; droite, une cote avec le symbole ins&eacute;r&eacute;</p>
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
@@ -111,12 +111,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125112553
+Cached time: 20260125112615
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.079 seconds
-Real time usage: 0.121 seconds
+CPU time usage: 0.100 seconds
+Real time usage: 0.158 seconds
 Preprocessor visited node count: 347/1000000
 Post&#8208;expand include size: 25876/2097152 bytes
 Template argument size: 10274/2097152 bytes
@@ -127,18 +127,18 @@ Unstrip post&#8208;expand size: 1146/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   30.280      1 -total
- 41.11%   12.447      1 Template:TechDraw_Tools_navi/fr
- 35.20%   10.660      2 Template:Navigation_menu_2
- 16.24%    4.917      1 Template:Userdocnavi/fr
- 12.49%    3.781      1 Template:GuiCommand/fr
- 11.71%    3.545      2 Template:Docnav/fr
-  5.92%    1.792      1 Template:Caption
-  4.84%    1.466      1 Template:Button
-  4.59%    1.389      1 Template:MenuCommand
+100.00%   51.737      1 -total
+ 34.21%   17.698      1 Template:MenuCommand
+ 22.15%   11.458      1 Template:TechDraw_Tools_navi/fr
+ 16.03%    8.294      2 Template:Navigation_menu_2
+ 11.61%    6.006      1 Template:Userdocnavi/fr
+ 11.49%    5.942      1 Template:GuiCommand/fr
+  7.77%    4.020      2 Template:Docnav/fr
+  5.69%    2.943      1 Template:Caption
+  4.92%    2.548      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278125-0!canonical and timestamp 20260125112553 and revision id 1743838. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278125-0!canonical and timestamp 20260125112615 and revision id 1743840. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
