--- a/wiki/fr/TechDraw_ExtensionInsertSquare.html
+++ b/wiki/fr/TechDraw_ExtensionInsertSquare.html
@@ -20,7 +20,7 @@
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Formater/organiser les cotes &rarr; Ins&eacute;rer le pr&eacute;fixe &laquo;&nbsp;&#9633;&nbsp;&raquo;
+<td class="ctEven">TechDraw &rarr; Formater/organiser les cotes &rarr; Ins&eacute;rer un pr&eacute;fixe &laquo;&nbsp;&#9633;&nbsp;&raquo;
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -111,12 +111,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125112615
+Cached time: 20260125112828
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.100 seconds
-Real time usage: 0.158 seconds
+CPU time usage: 0.078 seconds
+Real time usage: 0.108 seconds
 Preprocessor visited node count: 347/1000000
 Post&#8208;expand include size: 25876/2097152 bytes
 Template argument size: 10274/2097152 bytes
@@ -127,18 +127,18 @@ Unstrip post&#8208;expand size: 1146/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   51.737      1 -total
- 34.21%   17.698      1 Template:MenuCommand
- 22.15%   11.458      1 Template:TechDraw_Tools_navi/fr
- 16.03%    8.294      2 Template:Navigation_menu_2
- 11.61%    6.006      1 Template:Userdocnavi/fr
- 11.49%    5.942      1 Template:GuiCommand/fr
-  7.77%    4.020      2 Template:Docnav/fr
-  5.69%    2.943      1 Template:Caption
-  4.92%    2.548      1 Template:Button
+100.00%   24.893      1 -total
+ 31.06%    7.732      1 Template:TechDraw_Tools_navi/fr
+ 22.30%    5.552      2 Template:Navigation_menu_2
+ 18.17%    4.522      1 Template:Userdocnavi/fr
+ 14.73%    3.667      2 Template:Docnav/fr
+ 13.79%    3.433      1 Template:GuiCommand/fr
+  8.52%    2.122      1 Template:Caption
+  6.12%    1.524      1 Template:Button
+  4.90%    1.221      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278125-0!canonical and timestamp 20260125112615 and revision id 1743840. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278125-0!canonical and timestamp 20260125112827 and revision id 1743842. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
