--- a/wiki/fr/TechDraw_ExtensionInsertSquare.html
+++ b/wiki/fr/TechDraw_ExtensionInsertSquare.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ExtensionInsertSquare/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ExtensionInsertSquare&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_ExtensionInsertSquare.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Erg&auml;nzungQuadratsymbolEinf&uuml;gen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ExtensionInsertSquare.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionInsertSquare (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../pl/TechDraw_ExtensionInsertSquare.html" class="mw-pt-progress mw-pt-progress--complete" title='Rysunek Techniczny: Rozszerzenie Dodaj przedrostek "&#12348;" (100% translated)' lang="pl" dir="ltr">polski</a></li></ul></div>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionInsertDiameter.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionInsertDiameter.html" title="TechDraw ExtensionInsertDiameter/fr">Cote de diam&egrave;tre</a></div>
@@ -57,13 +57,11 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
 <ol><li>S&eacute;lectionnez une ou plusieurs cotes.</li>
 <li>Il existe plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
-<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionInsertSquare.svg&amp;filetimestamp=20240706152131&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionInsertSquare.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Ins&eacute;rer le pr&eacute;fixe "&#9633;"</a></span>.</li>
-<li>S&eacute;lectionnez la commande <b>TechDraw &rarr; Extensions&nbsp;: cotes &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionInsertSquare.svg&amp;filetimestamp=20240706152131&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionInsertSquare.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ins&eacute;rer un pr&eacute;fixe "&#9633;"</b> &agrave; partir du menu.</li></ul></li>
-<li>Le symbole "&#9633;" est ins&eacute;r&eacute; dans le texte de cote des cotes s&eacute;lectionn&eacute;es.</li></ol>
-</div>
+<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionInsertSquare.svg&amp;filetimestamp=20240706152131&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionInsertSquare.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Ins&eacute;rer un pr&eacute;fixe &laquo;&nbsp;&#9633;&nbsp;&raquo;</a></span>.</li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Formater/organiser les cotes &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionInsertSquare.svg&amp;filetimestamp=20240706152131&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionInsertSquare.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ins&eacute;rer un pr&eacute;fixe &laquo;&nbsp;&#9633;&nbsp;&raquo;</b> du menu.</li></ul></li>
+<li>Le symbole &laquo;&nbsp;&#9633;&nbsp;&raquo; est ins&eacute;r&eacute; dans le texte de cote des cotes s&eacute;lectionn&eacute;es.</li></ol>
 <p><br>
 </p>
 <div class="docnav">
@@ -111,34 +109,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125112828
+Cached time: 20260125112901
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.078 seconds
-Real time usage: 0.108 seconds
-Preprocessor visited node count: 347/1000000
-Post&#8208;expand include size: 25876/2097152 bytes
-Template argument size: 10274/2097152 bytes
+CPU time usage: 0.080 seconds
+Real time usage: 0.134 seconds
+Preprocessor visited node count: 346/1000000
+Post&#8208;expand include size: 25894/2097152 bytes
+Template argument size: 10292/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1146/5000000 bytes
+Unstrip post&#8208;expand size: 1150/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   24.893      1 -total
- 31.06%    7.732      1 Template:TechDraw_Tools_navi/fr
- 22.30%    5.552      2 Template:Navigation_menu_2
- 18.17%    4.522      1 Template:Userdocnavi/fr
- 14.73%    3.667      2 Template:Docnav/fr
- 13.79%    3.433      1 Template:GuiCommand/fr
-  8.52%    2.122      1 Template:Caption
-  6.12%    1.524      1 Template:Button
-  4.90%    1.221      1 Template:MenuCommand
+100.00%   36.911      1 -total
+ 24.47%    9.033      1 Template:TechDraw_Tools_navi/fr
+ 20.18%    7.449      1 Template:Userdocnavi/fr
+ 18.39%    6.787      2 Template:Navigation_menu_2
+ 14.37%    5.303      1 Template:Button
+ 12.36%    4.562      1 Template:GuiCommand/fr
+ 10.05%    3.711      2 Template:Docnav/fr
+  9.32%    3.439      1 Template:Caption
+  7.00%    2.583      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278125-0!canonical and timestamp 20260125112827 and revision id 1743842. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278125-0!canonical and timestamp 20260125112901 and revision id 1743844. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
