--- a/wiki/fr/TechDraw_ExtensionInsertDiameter.html
+++ b/wiki/fr/TechDraw_ExtensionInsertDiameter.html
@@ -21,7 +21,7 @@
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Formater/organiser les cotes &rarr; Ins&eacute;rer le pr&eacute;fixe &laquo;&nbsp;&#8960;&nbsp;&raquo;
+<td class="ctEven">TechDraw &rarr; Formater/organiser les cotes &rarr; Ins&eacute;rer un pr&eacute;fixe &laquo;&nbsp;&#8960;&nbsp;&raquo;
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -110,12 +110,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125112250
+Cached time: 20260125112922
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.068 seconds
-Real time usage: 0.088 seconds
+CPU time usage: 0.075 seconds
+Real time usage: 0.140 seconds
 Preprocessor visited node count: 346/1000000
 Post&#8208;expand include size: 25828/2097152 bytes
 Template argument size: 10245/2097152 bytes
@@ -126,18 +126,18 @@ Unstrip post&#8208;expand size: 1350/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   19.629      1 -total
- 33.09%    6.495      1 Template:TechDraw_Tools_navi/fr
- 23.18%    4.550      2 Template:Navigation_menu_2
- 17.89%    3.511      1 Template:Userdocnavi/fr
- 14.59%    2.863      2 Template:Docnav/fr
- 13.41%    2.632      1 Template:GuiCommand/fr
-  7.48%    1.468      1 Template:Caption
-  5.50%    1.080      1 Template:Button
-  5.34%    1.048      1 Template:MenuCommand
+100.00%   38.618      1 -total
+ 25.62%    9.893      1 Template:TechDraw_Tools_navi/fr
+ 20.43%    7.889      1 Template:GuiCommand/fr
+ 19.47%    7.520      2 Template:Navigation_menu_2
+ 13.99%    5.404      1 Template:Caption
+ 13.17%    5.086      1 Template:Userdocnavi/fr
+  9.65%    3.725      2 Template:Docnav/fr
+  8.27%    3.192      1 Template:MenuCommand
+  6.93%    2.676      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278113-0!canonical and timestamp 20260125112250 and revision id 1743824. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278113-0!canonical and timestamp 20260125112922 and revision id 1743846. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
