--- a/wiki/fr/TechDraw_ExtensionInsertDiameter.html
+++ b/wiki/fr/TechDraw_ExtensionInsertDiameter.html
@@ -60,9 +60,9 @@
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
 <ol><li>S&eacute;lectionnez une ou plusieurs cotes.</li>
 <li>Il existe plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
-<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionInsertDiameter.svg&amp;filetimestamp=20240706152033&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionInsertDiameter.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Ins&eacute;rer le pr&eacute;fixe &laquo;&nbsp;&#8960;&nbsp;&raquo;</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Formater/organiser les cotes &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionInsertDiameter.svg&amp;filetimestamp=20240706152033&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionInsertDiameter.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ins&eacute;rer le pr&eacute;fixe &laquo;&nbsp;&#8960;&nbsp;&raquo;</b> du menu.</li></ul></li>
-<li>Le symbole "&#8960;" est ins&eacute;r&eacute; dans le texte de cote des cotes s&eacute;lectionn&eacute;es.</li></ol>
+<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionInsertDiameter.svg&amp;filetimestamp=20240706152033&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionInsertDiameter.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Ins&eacute;rer un pr&eacute;fixe &laquo;&nbsp;&#8960;&nbsp;&raquo;</a></span>.</li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Formater/organiser les cotes &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionInsertDiameter.svg&amp;filetimestamp=20240706152033&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionInsertDiameter.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ins&eacute;rer un pr&eacute;fixe &laquo;&nbsp;&#8960;&nbsp;&raquo;</b> du menu.</li></ul></li>
+<li>Le symbole &laquo;&nbsp;&#8960;&nbsp;&raquo; est ins&eacute;r&eacute; dans le texte de cote des cotes s&eacute;lectionn&eacute;es.</li></ol>
 <p><br>
 </p>
 <div class="docnav">
@@ -110,12 +110,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125112922
+Cached time: 20260125112947
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.075 seconds
-Real time usage: 0.140 seconds
+CPU time usage: 0.073 seconds
+Real time usage: 0.117 seconds
 Preprocessor visited node count: 346/1000000
 Post&#8208;expand include size: 25828/2097152 bytes
 Template argument size: 10245/2097152 bytes
@@ -126,18 +126,18 @@ Unstrip post&#8208;expand size: 1350/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   38.618      1 -total
- 25.62%    9.893      1 Template:TechDraw_Tools_navi/fr
- 20.43%    7.889      1 Template:GuiCommand/fr
- 19.47%    7.520      2 Template:Navigation_menu_2
- 13.99%    5.404      1 Template:Caption
- 13.17%    5.086      1 Template:Userdocnavi/fr
-  9.65%    3.725      2 Template:Docnav/fr
-  8.27%    3.192      1 Template:MenuCommand
-  6.93%    2.676      1 Template:Button
+100.00%   23.295      1 -total
+ 44.35%   10.332      1 Template:TechDraw_Tools_navi/fr
+ 31.50%    7.337      2 Template:Navigation_menu_2
+ 14.35%    3.343      1 Template:Userdocnavi/fr
+  9.94%    2.316      2 Template:Docnav/fr
+  9.75%    2.272      1 Template:GuiCommand/fr
+  9.49%    2.210      1 Template:Caption
+  5.08%    1.183      1 Template:Button
+  4.65%    1.082      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278113-0!canonical and timestamp 20260125112922 and revision id 1743846. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278113-0!canonical and timestamp 20260125112946 and revision id 1743848. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
